Bug 375535 - Global Menu Bar widget does not open menus on hover
Summary: Global Menu Bar widget does not open menus on hover
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Global Menu widget (other bugs)
Version First Reported In: master
Platform: openSUSE Linux
: NOR normal
Target Milestone: 1.0
Assignee: Kai Uwe Broulik
URL:
Keywords:
: 375377 376180 376725 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-01-25 10:42 UTC by Fabian Vogt
Modified: 2017-06-22 08:40 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.10.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fabian Vogt 2017-01-25 10:42:52 UTC
With the in-application menu bar, you can click on "Help" to open a menu and then move the cursor to "File" to open that menu instead.

With the plasma widget you need to click on "File" for it to open.
Comment 1 David Edmundson 2017-01-25 18:09:57 UTC
Urgh.

Turns out this isn't easy.

We only get hover events if our window has focus.
The panel doesn't have focus because the menu window does.

I can't think of a good solution.
Comment 2 Kai Uwe Broulik 2017-01-25 18:11:23 UTC
Didn't I explicitly add the event listener hack to allow this? It doesn't work when the mouse is on the outer edge of the panel because of its padding, though. Here this works.
Comment 3 David Edmundson 2017-01-25 21:39:26 UTC
None of that eventFilter stuff seems to work here; and there's a code comment (from you) saying it doesn't.


I don't understand how it would help, an eventFilter on the menu isn't going to help you get mouseEvents on the button grid.

(off topic, could that eventFilter be the reason for your submenus closing issue?)
Comment 4 Kai Uwe Broulik 2017-01-26 09:11:47 UTC
> I  don't understand how it would help, an eventFilter on the menu isn't going to help you get mouseEvents on the button grid.

Yes it does. It filters mouse move events and then looks whether at cursor position is a button of the menu applet and if there is, it invokes it. The FIXME comment at the top only refers to when a submenu is opened.

> (off topic, could that eventFilter be the reason for your submenus closing issue?)

No, I'm experiencing this issue only with decoration appmenu, not the applet.
Comment 5 Kai Uwe Broulik 2017-02-06 09:29:23 UTC
Ah, when the menu is not at the left-most edge of the panel I can reproduce the issue.
Comment 6 Kai Uwe Broulik 2017-02-06 10:19:21 UTC
Git commit 10246712ae307ae9fb9cbaefbecc06e9a2c60cf5 by Kai Uwe Broulik.
Committed on 06/02/2017 at 10:15.
Pushed by broulik into branch 'Plasma/5.9'.

[AppMenu Applet] Map from scene after mapping from global

childAt expects coordinates relative to the item, so we need to mapFromScene before we do that.
FIXED-IN: 5.9.1

Differential Revision: https://phabricator.kde.org/D4452

M  +3    -2    applets/appmenu/lib/appmenuapplet.cpp

https://commits.kde.org/plasma-workspace/10246712ae307ae9fb9cbaefbecc06e9a2c60cf5
Comment 7 Kai Uwe Broulik 2017-02-06 10:27:55 UTC
*** Bug 375377 has been marked as a duplicate of this bug. ***
Comment 8 Kai Uwe Broulik 2017-02-08 13:46:02 UTC
*** Bug 376180 has been marked as a duplicate of this bug. ***
Comment 9 beojan 2017-03-18 21:45:47 UTC
This isn't fixed in Plasma 5.9.3.
Comment 10 Filzmaier Josef 2017-03-21 23:42:24 UTC
This is not fixed for me as well (Arch Linux Plasma 5.9.4)
Comment 11 Benjamin Schmitz 2017-05-31 20:29:25 UTC
Not fixed for me either (Arch Linux with Plasma 5.9.5). However, the menu in your "standalone" version on github (https://github.com/kotelnik/plasma-applet-active-window-control) works flawlessly. I recommend anyone currently having the issue to build that applet from source and use it as a replacement.
Comment 12 beojan 2017-05-31 20:53:51 UTC
If this isn't fixed for you, see the replacement QML file I posted on bug 376725 (which is really a duplicate of this one).
Comment 13 Kai Uwe Broulik 2017-06-22 05:35:25 UTC
*** Bug 376725 has been marked as a duplicate of this bug. ***
Comment 14 Kai Uwe Broulik 2017-06-22 08:40:29 UTC
Git commit f00e4eb97e5d6a6abe76269342653a93f6b53245 by Kai Uwe Broulik.
Committed on 22/06/2017 at 08:39.
Pushed by broulik into branch 'Plasma/5.10'.

[AppMenu Applet] Workaround Connections bug in Qt >= 5.8

Since Qt 5.8 for some reason the Connections {} on plasmoid.nativeInterface breaks.
FIXED-IN: 5.10.3

Differential Revision: https://phabricator.kde.org/D6335

M  +3    -5    applets/appmenu/package/contents/ui/main.qml

https://commits.kde.org/plasma-workspace/f00e4eb97e5d6a6abe76269342653a93f6b53245