[AppMenu Applet] Map from scene after mapping from global

childAt expects coordinates relative to the item, so we need to mapFromScene before we do that.

BUG: 375535
FIXED-IN: 5.9.1

Differential Revision: https://phabricator.kde.org/D4452